--- a/scalafmt/scala3.scalafmt.conf
+++ b/scalafmt/scala3.scalafmt.conf
@@ -8,3 +8,8 @@ runner.dialect = scala3
 rewrite.rules = [RedundantBraces, SortModifiers, PreferCurlyFors, SortImports, RedundantParens]
 rewrite.scala3.removeOptionalBraces = yes
 rewrite.scala3.convertToNewSyntax = yes
+rewriteTokens = {
+  "⇒": "=>"
+  "→": "->"
+  "←": "<-"
+}
