--- a/scalafmt/.scalafmt.conf
+++ b/scalafmt/.scalafmt.conf
@@ -1,13 +1,13 @@
-version = 3.5.1
+version = 3.6.1
 maxColumn = 140
 align = true
+newlines.source = unfold
 align.stripMargin = true
-assumeStandardLibraryStripMargin = true
-trailingCommas = preserve
 runner.dialect = scala3
-rewrite.rules = [RedundantBraces, SortModifiers, PreferCurlyFors, SortImports, RedundantParens]
+assumeStandardLibraryStripMargin = true
 rewrite.scala3.removeOptionalBraces = yes
 rewrite.scala3.convertToNewSyntax = yes
+rewrite.rules = [RedundantBraces, SortModifiers, PreferCurlyFors, SortImports, RedundantParens]
 rewriteTokens = {
   "⇒": "=>"
   "→": "->"
