--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,13 +1,20 @@
 version = 3.6.1
 maxColumn = 140
 align = true
-newlines.source = unfold
+newlines.source = keep
 align.stripMargin = true
 runner.dialect = scala3
-assumeStandardLibraryStripMargin = true
 rewrite.scala3.removeOptionalBraces = yes
 rewrite.scala3.convertToNewSyntax = yes
-rewrite.rules = [RedundantBraces, SortModifiers, PreferCurlyFors, SortImports, RedundantParens]
+assumeStandardLibraryStripMargin = true
+verticalMultiline.atDefnSite = true
+verticalMultiline.arityThreshold = 4
+rewrite.rules = [RedundantBraces, SortModifiers, PreferCurlyFors, RedundantParens, Imports]
+rewrite.imports.sort = original
+rewrite.imports.groups = [
+ ["scala\\..*"],
+ ["java\\..*"],
+]
 rewriteTokens = {
   "⇒": "=>"
   "→": "->"
